# kalshi-edge-bot

./: .env.example  .gitignore  LICENSE  README.md  SOURCE_NOTES.md  cli.py  pyproject.toml  requirements.txt
dashboard/: app.py  data.py
dashboard_v2/api/: db.py  main.py  models.py  stream.py
dashboard_v2/web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
scripts/: dev.ps1  seed_demo.py  seed_demo_data.py
src/: config.py
src/backtest/: replay.py
src/clients/: kalshi.py  polymarket.py
src/jobs/: arb_runner.py  copy_runner.py  daily_report.py
src/models/: digital_option.py
src/paper/: executor.py  migrations.py
src/risk/: gates.py  invariants.py  stale_guard.py  strategy_kill.py
src/signals/: __init__.py  obi.py  smart_money.py  tfi.py
src/strategies/: avellaneda_stoikov.py  consensus_copy.py  overround_arb.py  resolution_decay.py  safe_compounder.py
tests/: test_avellaneda_stoikov.py  test_calibration.py  test_cohort_snapshot.py  test_consensus_copy.py  test_copy_runner.py  test_daily_report.py  test_dashboard_data.py  test_digital_option.py  test_executor_venue.py  test_fee_models.py  test_fees.py  test_fees_properties.py  test_gates.py  test_gates_properties.py  test_integration_arb_runner.py  test_invariants.py  test_obi.py  test_orderbook_parser.py  test_overround_arb.py  test_overround_arb_properties.py  test_paper_executor.py  test_polymarket_client.py  test_replay.py  test_resolution_decay.py  test_safe_compounder.py  test_smart_money.py  test_stale_guard.py  test_strategy_kill.py  test_tfi.py
(+26 files in other folders)
